syntax = "proto3";

package forum.v1;

option go_package = "grpc/gen/proto;proto";

import "google/api/annotations.proto";
import "forum/v1/empty.proto";

message User {
  string email = 1;
  string token = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
}

message Profile {
  string username = 1;
  string bio = 2;
  string image = 3;
  bool following = 4;
}

service Users {
  rpc LoginUser (LoginUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/users/login"
      body: "*"
    };
  }

  rpc CreateUser (CreateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }

  rpc CurrentUser (Empty) returns (UserResponse) {
    option (google.api.http) = {
      get: "/user"
    };
  }

  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      put: "/user"
      body: "*"
    };
  }

  rpc ShowProfile (ShowProfileRequest) returns (ProfileResponse) {
    option (google.api.http) = {
      get: "/profiles/{username}"
    };
  }
  rpc FollowUser (FollowRequest) returns (ProfileResponse) {
    option (google.api.http) = {
      post: "/profiles/{username}/follow"
      body: "*"
    };
  }
  rpc UnfollowUser (UnfollowRequest) returns (ProfileResponse) {
    option (google.api.http) = {
      delete: "/profiles/{username}/follow"
    };
  }
}

/* request message */
message LoginUserRequest {
  message User {
    string email = 1;
    string password = 2;
  }
  User user = 1;
}

message CreateUserRequest {
  message User {
    string username = 1;
    string email = 2;
    string password = 3;
  }
  User user = 1;
}

message UpdateUserRequest {
  message User {
    string email = 1;
    string password = 2;
    string username = 3;
    string bio = 4;
    string image = 5;
  }
  User user = 1;
}

message ShowProfileRequest {
  string username = 1;
}

message FollowRequest {
  string username = 1;
}

message UnfollowRequest {
  string username = 1;
}

/* response message */
message UserResponse {
  User user = 1;
}

message ProfileResponse {
  Profile profile = 1;
}
